# CortadoBackend

./: .gitignore  AGENTS.md  CURRENT_RELEASE.md  CURRENT_TASK.md  DECISIONS.md  DECISIONS_NEEDED.md  INTERIM_TASK.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-agent.yml  build-control-plane.yml
_dev/: session_log.md  test_status.md
_dev/docs/: release_timeline.md  technical_report.md
_dev/features/: feat-1-1.md  feat-1-2.md  feat-1-3.md  feat-1-4.md  feat-2-1.md  feat-2-2.md  feat-2-3.md  feat-2-4.md  feat-3-1.md  feat-3-2.md  feat-3-3.md  feat-4-1.md  feat-4-2.md  feat-5-1.md  feat-5-2.md  (+5 more)
agent/: Dockerfile  go.mod  go.sum
control-plane/: Dockerfile  Dockerfile.portforward  go.mod  go.sum
daemon/: go.mod  go.sum
demo_app/: .env.example  README.md  pubspec.yaml
docs/: README.md  agent.md  control-plane.md  dev-portforward-smoke.md  flutter-package.md  protocols.md  system-architecture.md  terraform-deployment.md
flutter/: README.md  analysis_options.yaml  pubspec.yaml
indexer/: Dockerfile  README.md  pyproject.toml
indexer/src/cortado_indexer/: __init__.py  chunker.py  cli.py  embedding.py  models.py  qdrant.py  updater.py  updater_server.py
indexer/tests/: test_chunker.py  test_cli.py  test_embedding.py  test_qdrant.py  test_updater.py
proto/: buf.gen.yaml  buf.yaml
scripts/: bootstrap.sh  dev_portforward_deploy.sh  dev_portforward_probe.sh  dev_workspace.sh  initial_setup.sh  install_cortado_daemon.sh  rewrite_git_authorship.sh  vm_access_script.sh  vm_startup_script.sh  work.sh
terraform/: README.md
(+232 files in other folders)
