[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortado-indexer"
version = "0.1.0"
description = "Codebase indexing job scaffold for Cortado"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "tree-sitter==0.22.0",
  "tree-sitter-python==0.21.0",
  "tree-sitter-javascript==0.21.4",
  "tree-sitter-go==0.21.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
test-suite = "tests"
